demoProject/force-app/main/default/objects/AccountContactRelation/fields/A_disconnect_notice_is_issued__c.field-meta.xml
<CustomField>
    <fullName>A_disconnect_notice_is_issued__c</fullName>
    <label>A disconnect notice is issued</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email &amp; Voice</fullName>
            </value>
            <value>
                <fullName>Email &amp; SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>