demoProject/force-app/main/default/objects/AccountContactRelation/fields/Important_Payment_Updates__c.field-meta.xml
<CustomField>
    <fullName>Important_Payment_Updates__c</fullName>
    <label>Important Payment Updates</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>Email &amp; SMS</fullName>
            </value>
            <value>
                <fullName>Email &amp; Voice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>