demoProject/force-app/main/default/objects/AccountContactRelation/fields/Open_Service_Requests_Updated__c.field-meta.xml
<CustomField>
    <fullName>Open_Service_Requests_Updated__c</fullName>
    <label>Open Service Requests Updated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email &amp; Voice</fullName>
            </value>
            <value>
                <fullName>Email &amp; SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>