demoProject/force-app/main/default/objects/AccountContactRelation/fields/Your_payment_has_been_processed__c.field-meta.xml
<CustomField>
    <fullName>Your_payment_has_been_processed__c</fullName>
    <label>Your payment has been processed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email &amp; Phone</fullName>
            </value>
            <value>
                <fullName>Email &amp; SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>